# Architecture

./: CONTRIBUTING.md  QUESTIONS.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  dependabot.yml  labeler.yml  pull_request_template.md
.github/workflows/: ci.yml
architecture/: __init__.py  attention.py  basics.py  preprocess.py
architecture/pipeline/: preprocess.py
practice/: .gitignore  PRACTICE_BRANCH_INFO.md  README.md  SETUP_ALTERNATIVE.md  hidden_tests.py  playground_attention.py  playground_basics.py  playground_positional_encoding.py  pyproject.toml  validate.py
practice/architecture/: positional_encoding.py
practice/tests/: test_attention.py  test_placeholder.py  test_positional_encoding.py
src/architecture/: activations.py  layers.py
tests/: test_activations.py  test_layers.py
